# medical-chatbot

./: .gitignore  app.py  pyproject.toml  readme.md  requirements.txt  store_index.py  template.sh
.github/workflows/: cicd.yaml
research/: trials.ipynb
templates/: chat.html
